2023-08-15T16:07:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5869188127 # 1821
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-15
* notice: last 14d: unq all: 19 90
* notice: prev accum: outdated-unq outdated-all / unq all: 537 1450 / 559 1528
* notice: next accum: outdated-unq outdated-all / unq all: 537 1450 / 560 1540
* notice: prev exec diff / last date diff / accum: unq all: +1 +12 -0 -0 / +1 +12 -0 -0 / 1 12
* notice: removed / changed dates: [] / [2023-08-15]

2023-08-15T08:08:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5864997635 # 1820
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-15
* notice: last 14d: unq all: 18 78
* notice: prev accum: outdated-unq outdated-all / unq all: 536 1449 / 559 1528
* notice: next accum: outdated-unq outdated-all / unq all: 537 1450 / 559 1528
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-08-01] / []

2023-08-14T16:07:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5857978840 # 1818
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-14
* notice: last 14d: unq all: 19 79
* notice: prev accum: outdated-unq outdated-all / unq all: 535 1448 / 558 1519
* notice: next accum: outdated-unq outdated-all / unq all: 536 1449 / 559 1528
* notice: prev exec diff / last date diff / accum: unq all: +1 +9 -0 -0 / +2 +15 -0 -0 / 2 15
* notice: removed / changed dates: [2023-07-31] / [2023-08-14]

2023-08-14T08:08:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5853373749 # 1817