@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-15T16:07:34Z",
-  "count" : 12,
-  "count_minmax" : [ 12, 12 ],
-  "count_decinc" : [ -0, +12 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2023-08-16T00:29:24Z",
+  "count" : 24,
+  "count_minmax" : [ 12, 24 ],
+  "count_decinc" : [ -0, +24 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
 }
