@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-15T16:07:34Z",
+  "timestamp" : "2023-08-16T00:29:24Z",
   "count_outdated" : 1450,
   "uniques_outdated" : 537,
-  "count" : 1540,
-  "uniques" : 560,
+  "count" : 1552,
+  "uniques" : 561,
   "views" : [
     {
       "timestamp": "2023-08-02T00:00:00Z",
@@ -97,12 +97,12 @@
     },
     {
       "timestamp": "2023-08-15T00:00:00Z",
-      "count": 12,
-      "count_minmax": [ 12, 12 ],
-      "count_decinc": [ 0, 12 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 24,
+      "count_minmax": [ 12, 24 ],
+      "count_decinc": [ 0, 24 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
