@@ -1,6 +1,6 @@
 {
-  "count": 90,
-  "uniques": 19,
+  "count": 102,
+  "uniques": 20,
   "views": [
     {
       "timestamp": "2023-08-02T00:00:00Z",
@@ -54,8 +54,8 @@
     },
     {
       "timestamp": "2023-08-15T00:00:00Z",
-      "count": 12,
-      "uniques": 1
+      "count": 24,
+      "uniques": 2
     }
   ]
 }
