@@ -1,3 +1,12 @@
+2023-08-16T00:29:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5873170152 # 1822
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-16
+* notice: last 14d: unq all: 20 102
+* notice: prev accum: outdated-unq outdated-all / unq all: 537 1450 / 560 1540
+* notice: next accum: outdated-unq outdated-all / unq all: 537 1450 / 561 1552
+* notice: prev exec diff / last date diff / accum: unq all: +1 +12 -0 -0 / +2 +24 -0 -0 / 2 24
+* notice: removed / changed dates: [] / [2023-08-15]
+
 2023-08-15T16:07:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5869188127 # 1821
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-15
